# igrmonty

./: .gitignore  CMakeLists.txt  README  README.md  build.py  compton.c  constants.h  custom.h  decs.h  geodesics.c  grmonty.c  grmonty.spec  h5io.c  harm_model.c  harm_model.h  harm_utils.c  hotcross.c  init_geometry.c  init_harm_data.c  init_iharm2dv3_data.c  interp.c  jnu_mixed.c  machines.py  main.c  makefile  malloc.c  model_bhlight3d.c  package.py  par.c  par.h  plot.py  plspec.m  plspec.py  radiation.c  random.c  run_grmonty_multi.sh  scatter_super_photon.c  slurm  slurm-120589.out  spec_to_txt.py  (+9 more)
machines/: delta.make
model/: afd.c  afd.h  bhlight2d.c  bhlight2d.h  bhlight3d.c  bhlight3d.h  iharm.c  iharm.h  pss.c  pss.h  simplesphere.c  simplesphere.h  sphere.c  sphere.h  twopoint.c
model/afd/: model.h
model/bhlight2d/: model.h
model/bhlight3d/: model.h
model/deprecated/pss/: model.h
model/deprecated/simplesphere/: model.c  model.h
model/hamr/: model.c  model.h
model/iharm/: model.c  model.h
model/pss/: model.c  model.h
model/riaf/: example.par  model.c  model.h
model/simplesphere/: model.c  model.h
model/sphere/: example.par  model.c  model.h
model/template/: model.c  model.h
model/twopoint/: model.c  model.h
scripts/: kev_plot.py  plot.py
src/: M_unit  bremss.c  compton.c  compton.h  constants.h  coordinates.c  coordinates.h  debug.c  decs.h  grid.c  h5io.h  hdf5_utils.c  hdf5_utils.h  hotcross.c  hotcross.h  init_geometry.c  interp.c  jnu_mixed.c  kappa_sampler.c  main.c  malloc.c  model_radiation.h  par.c  par.h  radiation.c  random.c  scatter_super_photon.c  tablecache.c  tablecache.h  tests.c  tetrads.c  track_super_photon.c  utils.c
test/: sphere.py  units.py
test/bremss/: electron-electron.c  electron-ion.c  stub-decs.h
tools/: common.py  pack  plsed
